# mcp-toolkit-cli

./: .gitignore  README.md  pyproject.toml  setup.py
src/mcp_toolkit_cli/: __init__.py  __main__.py  cli.py  debugger.py  generator.py  templates.py  validator.py
tests/: test_generator.py
