[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-toolkit-cli"
version = "1.0.0"
description = "🔧 MCP Toolkit CLI - Lightweight MCP Server Development Toolkit"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "gitstq"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
keywords = ["mcp", "model-context-protocol", "cli", "toolkit", "server", "generator"]

[project.scripts]
mcp-toolkit = "mcp_toolkit_cli.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/mcp-toolkit-cli"
"Bug Reports" = "https://github.com/gitstq/mcp-toolkit-cli/issues"
Source = "https://github.com/gitstq/mcp-toolkit-cli"

[tool.setuptools.packages.find]
where = ["src"]
